--- a/aboutme.html
+++ b/aboutme.html
@@ -2,8 +2,9 @@
     <html>
         <head>
             <h1>
-                Test School
+                Welcome to the DeepWeb.
             </h1>
+            <p>©ozanrijen</p>
         </head>
     </html>
 
