--- a/Wie ben ik/index.html
+++ b/Wie ben ik/index.html
@@ -7,11 +7,11 @@
       <!--Tabs en banners-->
         <img class="header" src="assets/banner.jpg">
         <ul>
-        <li><a class="active" href="#home">Thuis</a></li>
+        <li><a class="active" href="index.html">Thuis</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="overmij.html">Over mij</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul>
-
+        <h1>Welkom bij mijn website.</h1>
     </body>
 </html>
