--- a/Wie ben ik/index.html
+++ b/Wie ben ik/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <title>Wie ben ik</title>
       <link rel="stylesheet" type="text/css" href="etc/style.css">
     </head>
     <body>
       <!--Tabs en banners-->
-        <img class="header" src="assets/banner.jpg">
+        <img class="header" src="assets/banner.jpg" alt="Banner">
         <ul>
         <li><a class="active" href="index.html">Thuis</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
