--- a/B1W5O1/index.html
+++ b/B1W5O1/index.html
@@ -5,13 +5,15 @@
             Gehaktbrood Recept
         </title>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <ul>
+        <main class="container">
         <h1>Gehaktbrood</h1>
+        <hr>
         <p>Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor een buffet. </p>
-        <h2>Ingrediënten</h2>
+        <h2>Ingrediënten</h2> 
+        <ul>
         <li>1 rode paprika</li>
         <li>1 groene paprika</li>
         <li>1 ui</li>
@@ -25,5 +27,16 @@
         <li>1 theelepel tabasco</li>
         <li>peper
         </ul>
+        <h2>Bereidingswijze</h2>
+        <ol>
+        <p>1. Warm de oven voor op 175 graden Celsius.</p>
+        <p>2. Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak de knoflook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn.</p>
+        <p>3. Doe het gehakt, paprika, ui, bacon, peterselie, paneermeel, ei, tomatenpuree, tabasco en peper in een kom. Pers de tenen knoflook erboven uit en kneed goed totdat alle ingrediënten zijn gemengd.</p>     
+        <p>4. Druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</p>
+        <p>5. Haal de vorm uit de oven. Laat even afkoelen en haal het daarna uit de vorm. Serveer het gehaktbrood op een schotel.</p>
+        </ol>
+        <img class="image" src="assets/img/gehaktbrood.jpg" alt="Gehaktbrood">
+        <div class="box">Tip: Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je de bacon weglaten. </div>
+    </main>
     </body>
 </html>
