--- a/B1W5O1/index.html
+++ b/B1W5O1/index.html
@@ -8,6 +8,13 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
+        <tabblad>
+        <ul class="tabblad">
+        <li><a href="voorgerecht.html">Voorgerecht</a></li>
+        <li><a href="hoofdgerecht.html">Hoofdgerecht</a></li>
+        <li><a href="nagerecht.html">Nagerecht</a></li>
+        </ul>
+        </tabblad>
         <main class="container">
         <h1>Gehaktbrood</h1>
         <hr>
