--- a/Blok 2/lingo/lingo.html
+++ b/Blok 2/lingo/lingo.html
@@ -7,13 +7,12 @@
     <body>
         <h1>Lingo</h1>
         <p>Groen = Goed / Geel = Verkeerde plek / Rood = Fout</p>
-        <div id="lingo-container">
-            <input type="text" id="letter1">
+        <div id="container">
         </div>
         <br>
-        <input type="text">
+        <input id="antwoord" type="text">
         <br>
-        <button onclick="lingo()">Check</button>
+        <button onclick="Check()">Check</button>
         <script src="assets/js/lingo-nl.js"></script>
     </body>
 </html>
