--- a/Blok 2/responsive-website/index.html
+++ b/Blok 2/responsive-website/index.html
@@ -1,76 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>    
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
+<html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive website</title>
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Rijschool FLEXi</title>
+
 </head>
-
 <body>
-<div class="yellowbar">
-    <img src="assets/images/bar.png">
-</div>
 
-<header>
-<div class="navbar">
-  <a href="#Contact">CONTACT</a>
-  <a href="#Opfris cursus">OPFRIS CURSUS</a>
-  <a href="#Theorieles">THEORIELES</a>
-
-  <div class="dropdown2">
-    <button class="dropbtn2">MOTORRIJBEWIJS
-    <i class="fa fa-caret-down"></i>
-    </button>
-
-  <div class="dropdown-content2">
-      <a href="#">RIJBEWIJS A</a>
-      <a href="#">RIJBEWIJS B</a>
-      <a href="#">RIJBEWIJS C</a>
-  </div>
-</div>
-
-  <div class="dropdown">
-    <button class="dropbtn">AUTORIJBEWIJS
-      <i class="fa fa-caret-down"></i>
-    </button>
-
-    <div class="dropdown-content">
-      <a href="#">RIJBEWIJS A</a>
-      <a href="#">RIJBEWIJS B</a>
-      <a href="#">RIJBEWIJS C</a>
-    </div>
-</div>
-    <img src="assets/images/flex-logo.png">
-</header>
-<main>
-    <img src="assets/images/auto.png">
-    <img id="banner" src="assets/images/banner.png">
-    </div>
-</main>
-
-<div class="grid-container">
-    <article class="center">
+<div class="body-container">
+    <div class="grid-container">
+        <div class="navbar"></div>
+            <div class="navsmart"></div>
+    
+            <ul>
+                <div class="dropdown">
+                    <button class="dropbtn">AUTORIJBEWIJS</button>
+                    <div class="dropdown-content">
+                    <a href="#">Aanmelden</a>
+                    <a href="#">Tarieven</a>
+                    <a href="#">Vragen</a>
+                    </div>
+                  </div>
+                <div class="dropdown">
+                    <button class="dropbtn">MOTORRIJBEWIJS</button>
+                    <div class="dropdown-content">
+                    <a href="#">Aanmelden</a>
+                    <a href="#">Tarieven</a>
+                    <a href="#">Vragen</a>
+                    </div>
+                </div>
+                <li><a href="#">THEORIELES</a></li>
+                <li><a href="#">OPFRIS CURSUS</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+    <div class="logo"></div>
+        <div class="whitenav"></div>
+            <div class="wallpaper"></div>
+                <div class="banner"></div> 
+                    <div class="wrapdisplay">
+                        
+    <article>
         <h1>Proefles</h1>
         <hr>
-        <p>Affronting everything discretion men now own did. Still round match we to. Frankness pronounce daughters remainder extensive has but. Happiness cordially one determine concluded fat. Plenty season beyond by hardly giving of. Consulted or acuteness dejection an smallness if. Outward general passage </p>
+        <p>Arrived totally in as between private. Favour of so as on pretty though elinor direct. Reasonable estimating be alteration we themselves entreaties me of reasonably. Direct wished so be expect polite valley. Whose asked stand it sense no spoil to. Prudent you too his conduct feeling limited and. Side he lose paid as hope so face upon be. Goodness did suitable learning put. </p>
         <button>GRATIS Proefles</button>
     </article>
 
     <article>
         <h1>Locatie</h1>
         <hr>
-        <p>Both rest of know draw fond post as. It agreement defective to excellent. Feebly do engage of narrow. Extensive repulsive belonging depending if promotion be zealously as. Preference inquietude ask now are dispatched led appearance. Small meant in so doubt hopes. Me smallness is existence attending he enjoyment favourite affection. </p>
+        <p>Unfeeling so rapturous discovery he exquisite. Reasonably so middletons or impression by terminated. Old pleasure required removing elegance him had. Down she bore sing saw calm high. Of an or game gate west face shed. ﻿no great but music too old found arose. 
+        </p>
     </article>
 
     <article>
         <h1>Rijlessen</h1>
         <hr>
-        <p>Did shy say mention enabled through elderly improve. As at so believe account evening behaved hearted is. House is tiled we aware. It ye greatest removing concerns an overcame appetite. Manner result square father boy behind its his.</p>
+        <p>Allow miles wound place the leave had. To sitting subject no improve studied limited. Ye indulgence unreserved connection alteration appearance my an astonished. Up as seen sent make he they of. Her raising and himself pasture believe females. Fancy she stuff after aware merit small his. Charmed esteems luckily age out. </p>
     </article>
+    </div>
+    <div class="video"></div>
 </div>
-    <footer>
-        <img src="assets/images/thumbnail.png">
-    </footer>
+</div>
+    <div class="footer">Door Oguzhan Korucu A2</div>
 </body>
 </html>
